--- a/p1.css
+++ b/p1.css
@@ -125,3 +125,13 @@
   border: 2px solid #fff;
   background-color: transparent;
 }
+.footer {
+  height: 70px;
+  background-color: #1f2937;
+}
+.footer div {
+  font-size: 14px;
+  text-align: center;
+  color: #fff;
+  padding-top: 25px;
+}
